Bug 561844 - [14][test] SwitchExpressionsYieldTest tests need to remove preview
Change-Id: Ief0c32c84210f84678e5463906b1930f2309f451